fix flex-wrap error

--- a/frontend/src/components/skills/skills.css
+++ b/frontend/src/components/skills/skills.css
@@ -1,49 +1,3 @@
-.container_card{
-
-    position: relative;
-    transform: rotate3d(0, 1, 0, 0deg);
-
-    transition: all 1s ease-in-out
-}
-
-
-.container_card:hover{
-
-    transform: rotate3d(0, 1, 0, 180deg);
-
-
-}
-
-
-.container_card_info {
-    width: 250px;
-    height: 318px;
-    position: absolute;
-    top: 0;
-    padding: 5px;
-    color: rgb(21, 13, 13);
-    font-size: 14px;
-    font-weight: 500;
-    transform: rotate3d(0, 1, 0, 180deg);
-    opacity: 0;
-
-    transition: all 1.2s ease-in-out
-
-
-}
-
-.container_card_info:hover{
-    opacity: 1;
-
-
-    transition-delay: 200ms;
-}
-
-
-
-
-
-
 
 .container_cards{
     margin-top: 30px;
@@ -94,28 +48,13 @@
     background: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-
-    padding: 15px 20px;
-
+    flex-wrap: nowrap;
+    padding: 7px 20px;
     font-size: 17px;
-
     transform: translateY(-80px);
-
     transition: all 0.4s ease-in-out;
-
     z-index: -1;
-
     opacity: 0;
-}
-
-
-
-@media (max-width: 468px) {
-
-    .card_text{
-        flex-wrap: nowrap;
-    }
 }
 
 
